feat(api.v1): support listing tagged memberships
This allows systems to get a user's tagged groups, rather than just all
tagged groups without regard for relevance for their user of interest.
